@@ -7,19 +7,19 @@
     <groupId>uk.yermak</groupId>
     <artifactId>audiobookconverter</artifactId>
 
-<!--
-    <version>5.5.10</version>
--->
-    <version>#{APP_VERSION}#</version>
+    <version>5.6.0</version>
+<!--    <version>#{APP_VERSION}#</version>-->
 
     <properties>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <compiler.generate.no.warnings>off</compiler.generate.no.warnings>
         <compiler.max.memory>700m</compiler.max.memory>
         <compiler.debug>on</compiler.debug>
-        <compiler.args.main>--enable-preview</compiler.args.main>
-        <javafx.version>16</javafx.version>
+<!--
+        <compiler.args.main>&#45;&#45;enable-preview</compiler.args.main>
+-->
+        <javafx.version>17.0.0.1</javafx.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -128,6 +128,23 @@
             <version>4.3.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.apple/AppleJavaExtensions -->
+        <dependency>
+            <groupId>com.apple</groupId>
+            <artifactId>AppleJavaExtensions</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+
+<!--
+        <dependency>
+            <groupId>com.apple</groupId>
+            <artifactId>javaextensions</artifactId>
+            <scope>>system</scope>
+            <systemPath>/Users/Yarick_Yermak/Projects/AudioBookConverter/lib/applejavaextensions-1.4.jar</systemPath>
+        </dependency>
+-->
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -144,7 +161,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>ConverterApplication</mainClass>
+                    <mainClass>AudiobookConverter</mainClass>
                     <executable>${java.home}\bin\java</executable>
                 </configuration>
             </plugin>
@@ -168,9 +185,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
+<!--
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>&#45;&#45;enable-preview</argLine>
                 </configuration>
+-->
             </plugin>
 
             <plugin>
@@ -181,7 +200,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>uk.yermak.audiobookconverter.fx.ConverterApplication</mainClass>
+                            <mainClass>uk.yermak.audiobookconverter.AudiobookConverter</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
